WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188404
Assertion failed in Webcore::Process::setIdentifier()
https://bugs.webkit.org/show_bug.cgi?id=188404
Summary
Assertion failed in Webcore::Process::setIdentifier()
Sihui Liu
Reported
2018-08-07 23:24:37 PDT
Encounter the crash on iOS debug build when using Kayak app, which uses both WK1 and WK2.
Attachments
Patch
(1.25 KB, patch)
2018-08-07 23:42 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-08-07 23:25:18 PDT
<
rdar://problem/43029137
>
Radar WebKit Bug Importer
Comment 2
2018-08-07 23:26:15 PDT
<
rdar://problem/43035627
>
Sihui Liu
Comment 3
2018-08-07 23:42:41 PDT
Created
attachment 346758
[details]
Patch
WebKit Commit Bot
Comment 4
2018-08-08 08:54:52 PDT
Comment on
attachment 346758
[details]
Patch Clearing flags on attachment: 346758 Committed
r234692
: <
https://trac.webkit.org/changeset/234692
>
WebKit Commit Bot
Comment 5
2018-08-08 08:54:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug