Assertion failed in Webcore::Process::setIdentifier() https://bugs.webkit.org/show_bug.cgi?id=188404 <rdar://problem/43029137>

Reviewed by Chris Dumez.

App using both WebKit1 and WebKit may crash in WebKit initialization.

* platform/Process.cpp:
(WebCore::Process::setIdentifier):


Canonical link: https://commits.webkit.org/203515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234692 268f45cc-cd09-0410-ab3c-d52691b4dbfc